--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
   "name": "@55hudong/modal",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "main": "build-esm/modal.js",
-  "repository": "git@github.com:55hudong/BaseModule.git",
+  "module": "build-esm/modal.js",
+  "typings": "typings/modal.d.ts",
+  "repository": "https://github.com/55hudong/modal.git",
   "description": "test",
   "author": "coolcoffee",
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --progress",
-    "clean": "rm -rf ./build && rm -rf ./build-esm",
-    "build": "npm run clean && webpack -w false && tsc --target es2017 --outDir build-esm --declaration true --declarationDir build-esm"
+    "clean": "rm -rf ./build && rm -rf ./build-esm && rm -rf ./typings",
+    "build": "npm run clean && webpack -w false && tsc"
   },
   "dependencies": {
     "@types/jquery": "^3.2.17",
-    "jquery": "^3.2.1",
-    "uglifyjs-webpack-plugin": "^1.1.5"
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.1",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.22.0",
-    "browser-sync": "^2.18.8",
     "css-loader": "^0.26.1",
-    "flow": "^0.2.3",
-    "gulp-uglify": "^2.0.1",
     "html-loader": "^0.4.4",
     "jasmine-core": "^2.5.2",
     "karma": "^2.0.0",
@@ -39,6 +37,7 @@
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
     "typescript": "^2.1.6",
+    "uglifyjs-webpack-plugin": "^1.1.5",
     "webpack": "3.0.0",
     "webpack-dev-server": "^2.3.0"
   }
