--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "sourceMap": false,
+    "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "lib": ["es2015", "dom", "es2015.iterable"],
     "declaration": true,
-    "declarationDir": ".",
-    "outDir": "./build"
+    "declarationDir": "./typings",
+    "outDir": "./build-esm"
   }
 }
